tests/NormalTests/paczka1/fuzzy1/87734399.err
Error in line 10: 54TQ1C S460 66,55
Error in line 7: CyZAscDFUL A93 35,3
Error in line 19: A93 S460 99,9
Error in line 26: iE9R9 S460 94,6
Error in line 37: CyZAscDFUL S668 10,8
Error in line 29: qg0090xg A93 2,8
